Fix header wrapping

--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -24,7 +24,6 @@ body {
 }
 
 .title-wrap-word {
-  overflow: hidden;
   overflow-wrap: break-word;
   word-wrap: break-word;
 }
